# agnostik

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  benchmark-rustvcyrius.md  cyrb.toml  cyrius.cyml  cyrius.toml
.github/workflows/: ci.yml  release.yml
benches/: bench.bcyr  bench.cyr  benchmarks.rs
docs/: api-surface.snapshot  doc-health.md
docs/adr/: 001-revive-derive-serialize.md  002-derive-serialize-7-of-9.md  README.md
docs/architecture/: overview.md
docs/audit/: 2026-04-26-audit.md  2026-05-10-audit.md  2026-06-01-audit.md
docs/benchmarks/: benchmark-rust-v-cyrius-legacy.md  history.csv
docs/development/: compile-profile-2026-05-09.md  roadmap.md  state.md
docs/development/issues/: cyrius-audit-missing-check-script-2026-04-26.md  cyrius-derive-comments-in-struct-body-2026-05-10.md  cyrius-lint-ufcs-pascal-prefix-snake-case-2026-04-26.md  cyrlint-char-literal-brace-bug-2026-05-09.md
docs/development/issues/archive/: README.md  cyrius-lint-ufcs-pascal-prefix-snake-case-2026-04-26.md  cyrlint-char-literal-brace-bug-2026-05-09.md
lib/: hashmap.cyr  syscalls_min.cyr
rust-old/: Cargo.toml  bench-history.csv
rust-old/benches/: benchmarks.rs
rust-old/src/: config.rs  error.rs  llm.rs  security.rs  telemetry.rs
rust-old/supply-chain/: audits.toml  config.toml
scripts/: api-surface.sh  bench-history.sh  bench-regression.sh  bench.sh  build.sh  version-bump.sh
src/: agent.cyr  agent.rs  audit.cyr  audit.rs  classification.cyr  classification.rs  config.cyr  config.rs  error.cyr  error.rs  hardware.cyr  hardware.rs  lib.cyr  lib.rs  llm.cyr  llm.rs  logging.rs  main.cyr  proto.cyr  secrets.cyr  secrets.rs  security.cyr  security.rs  security_part1.cyr  security_part2.cyr  telemetry.cyr  telemetry.rs  types.cyr  types.rs  validation.cyr  validation.rs
supply-chain/: audits.toml  config.toml
tests/: agnostik.tcyr  integration.rs  test.sh  test_coverage_1.tcyr  test_coverage_3.tcyr  test_coverage_4.tcyr
tests/bcyr/: agnostik.bcyr
tests/tcyr/: agnostik.tcyr  string_shift_bug.tcyr  test_audit_2026_04_26.tcyr  test_audit_5712.tcyr  test_coverage_1.tcyr  test_coverage_2.tcyr  test_coverage_3.tcyr  test_coverage_4.tcyr  test_serde_roundtrip.tcyr  test_v107_unicode_pii.tcyr  test_v110_serde_golden.tcyr  test_v111_subbyte_widths.tcyr  test_v112_fuzz.tcyr  test_v120_otlp.tcyr  test_v130_slice_safety.tcyr
