[package]
name = "agnostik"
version = "0.90.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Agnostik — shared types, error handling, and domain primitives for the AGNOS ecosystem"
homepage = "https://github.com/MacCracken/agnostik"
repository = "https://github.com/MacCracken/agnostik"
readme = "README.md"
documentation = "https://docs.rs/agnostik"
keywords = ["agnos", "types", "agent", "sandbox", "telemetry"]
categories = ["data-structures", "os"]
publish = false
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["agent", "security", "telemetry"]
agent = ["security", "dep:chrono"]
security = []
telemetry = ["dep:chrono"]
audit = ["dep:chrono"]
llm = []
secrets = ["dep:zeroize", "dep:chrono"]
config = []
classification = []
validation = []
hardware = []
logging = ["dep:tracing-subscriber"]
full = ["agent", "security", "telemetry", "audit", "llm", "secrets", "config", "classification", "validation", "hardware", "logging"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

# Optional
chrono = { version = "0.4", default-features = false, features = ["std", "serde"], optional = true }
zeroize = { version = "1.7", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
chrono = { version = "0.4", features = ["clock"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["full"]
